syntax = "proto3";

option csharp_namespace = "Graph.Apollo.Cloud.Common";

package Graph.Apollo.Cloud.Common;

service Courses {
  // Sends a greeting
    rpc GetCourses (CoursesRequest) returns (CoursesReply);
}

// The request message containing the user's name.
message CoursesRequest {
  string name = 1;
}

// The response message containing the greetings.
message CoursesReply {
  string message = 1;
}

message Course {
    string title = 1;
}

